Tue Aug 24 18:03:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.h:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Added helper method reactor to get the reactor

        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
          Use the new reactor helper and throw an exception when we can't
          get a reactor when we require one

Tue Aug 24 15:31:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDSPublisherListener_T.cpp:
        * connectors/dds4ccm/impl/DDSSubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.cpp:
          Fixed memory leaks

Tue Aug 24 15:10:36 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/DDS_State_Connector_T.cpp:
          Fixed memory leak

Tue Aug 24 11:30:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DataWriter.cpp:
        * connectors/dds4ccm/impl/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
        * connectors/dds4ccm/impl/Publisher_T.cpp:
        * connectors/dds4ccm/impl/Subscriber_T.cpp:
        * connectors/dds4ccm/impl/Topic_T.cpp:
          Delete the DDS listeners when they are set

Tue Aug 24 09:28:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:
        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipant_T.cpp:
          Fixed memory leaks

Mon Aug 23 14:11:46 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
          Layout changes to comments
